# bitter-xylophone

./: .gitignore  README.md  TODO.md  Vagrantfile  bitter-xylophone.cabal  project.clj  stack.yaml
app/: Main.hs
cljs/bitter-xylophone/: actions.cljs  core.cljs  filtering.cljs  routing.cljs
cljs/bitter_xylophone/: actions.cljs  core.cljs  filtering.cljs  running_apps.cljs
public/sample/: sample.ps1
resources/: index.html
resources/css/: bitter-xylophone.css
src/: Process.hs  Rest.hs
