name:                bitter-xylophone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bitter-xylophone#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rest
  build-depends:       base >= 4.7 && < 5,
                       wai,
                       http-types
  default-language:    Haskell2010

executable bitter-xylophone-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  if os(windows)
    ghc-options: -Wall -threaded -pgml g++ -optl-static
  else
    ghc-options: -Wall
  build-depends:       base
                     , bitter-xylophone
                     , wai-handler-launch
  default-language:    Haskell2010

test-suite bitter-xylophone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bitter-xylophone
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bitter-xylophone
